# llm-agent-framework-sample

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_basic_tool_call.py  02_processing_loop.py  03_mcp_stub.py  04_a2a_stub.py
src/agent_framework/: __init__.py
src/agent_framework/a2a/: __init__.py  client.py  coordinator.py  protocol.py
src/agent_framework/agent/: __init__.py  agent.py  human_in_the_loop.py  memory.py  orchestration.py
src/agent_framework/base/: __init__.py  llm.py  tool.py
src/agent_framework/data_structures/: __init__.py  task.py  tool_call.py  tool_call_result.py  trajectory.py
src/agent_framework/llms/: __init__.py  mock_llm.py  ollama_llm.py
src/agent_framework/mcp/: __init__.py  client.py  provider.py
src/agent_framework/monitoring/: __init__.py  logger.py  telemetry.py
src/agent_framework/tools/: __init__.py  registry.py
src/agent_framework/tools/builtin/: __init__.py  echo.py  math_eval.py
tests/: test_agent.py  test_data_structures.py  test_telemetry.py  test_tools.py
